docs: regenerate wiki after merge [skip ci]